fixed overflow in mobile view + centered the name of pod and submit button in contact form + fixed styling of about-us section

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -8,6 +8,9 @@
 @import 'footer';
 @import "podMember";
 
+html, body{
+  overflow-x: hidden;
+}
 /*-----Dark-Mode------*/
 .dark-mode{
   background-color: #121212!important;
