--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -43,6 +43,8 @@
 	outline: none;
 	opacity: 0.8;
 	transition: 0.5s;
+	display: block;
+	margin: auto;
 }
 button:hover {
 	opacity: 1.5;
